--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="reset">
     </form>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCx_2Q3BHMoTwbspPWvZFpckePTAu1ezdDkSt8jsC-KuGtXQ/viewform?embedded=true" width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+    <div style="position: relative; width: 200px; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 640px;;; height: 400px;; top: 0; left: 0; border: none; padding: 0;margin: 0;"
