--- a/index.html
+++ b/index.html
@@ -1,47 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5b3g0046 郭家妤</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>5b3g0046 郭家妤</title>
+  <style>
+    body {
+      font-family: "Noto Sans TC", sans-serif;
+      background-color: #f5f5f5;
+      padding: 20px;
+      line-height: 1.6;
+    }
+
+    form {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    fieldset {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      padding: 15px;
+    }
+
+    legend {
+      font-weight: bold;
+    }
+
+    label {
+      display: inline-block;
+      width: 60px;
+    }
+
+    textarea {
+      width: 100%;
+      resize: none;
+    }
+
+    iframe {
+      border: none;
+    }
+
+    .canva-wrapper {
+      max-width: 320px;
+      height: 180px;
+      margin: 20px auto;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .form-wrapper,
+    .video-wrapper {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+  </style>
 </head>
 <body>
-    <form>
-        <fieldset> 
-            <legend>個人資料</legend>
-            <label for="userage">姓名:</label>
-            <input type="text" id="username">
-            <br>
-            <label for="useraddr">地址</label>
-            <input type="text" id="useraddr">
-            <br>
-        </fieldset>
-        <fieldset> 
-            <legend>柯南</legend>
-            喜歡的角色:<br>
-            <textarea name="suggestion" cols="40" rows="4">角色</textarea><br><br>
-            喜歡的電影:<br>
-            <textarea name="suggestion" cols="40" rows="4">電影</textarea>
-        </fieldset>
-        <input type="submit">
-        <input type="reset">
-    </form>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCx_2Q3BHMoTwbspPWvZFpckePTAu1ezdDkSt8jsC-KuGtXQ/viewform?embedded=true" width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
-    <div style="position: relative; width: 100%; padding-top: 56.2500%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 640px;;; height: 400px;; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGhln67iZE/QHhyBfTVVTiYpJqNDfvcOA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div>
-<div style="position: relative; width: 200px; height: 250px; padding-top: 177.7778%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGhlSTEYlQ/6T7H0c5QD2Fp2KpWvjvekQ/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
+
+  <!-- 表單 -->
+  <form>
+    <fieldset>
+      <legend>個人資料</legend>
+      <label for="username">姓名:</label>
+      <input type="text" id="username"><br><br>
+      <label for="useraddr">地址:</label>
+      <input type="text" id="useraddr"><br>
+    </fieldset>
+
+    <fieldset>
+      <legend>柯南</legend>
+      喜歡的角色：<br>
+      <textarea name="character" rows="4">角色</textarea><br><br>
+      喜歡的電影：<br>
+      <textarea name="movie" rows="4">電影</textarea>
+    </fieldset>
+
+    <input type="submit" value="送出">
+    <input type="reset" value="重設">
+  </form>
+
+  <!-- Google 表單 -->
+  <div class="form-wrapper">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCx_2Q3BHMoTwbspPWvZFpckePTAu1ezdDkSt8jsC-KuGtXQ/viewform?embedded=true" width="100%" height="554">載入中…</iframe>
   </div>
-  <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGhlSTEYlQ&#x2F;6T7H0c5QD2Fp2KpWvjvekQ&#x2F;watch?utm_content=DAGhlSTEYlQ&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">設計者</a>：郭家妤
-  </iframe>
+
+  <!-- Canva 影片 1 -->
+  <div class="video-wrapper">
+    <div class="canva-wrapper">
+      <iframe loading="lazy"
+        src="https://www.canva.com/design/DAGhln67iZE/QHhyBfTVVTiYpJqNDfvcOA/view?embed"
+        width="100%" height="100%" allowfullscreen></iframe>
+    </div>
+    <p>
+      <a href="https://www.canva.com/design/DAGhln67iZE/QHhyBfTVVTiYpJqNDfvcOA/view?utm_content=DAGhln67iZE&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+         target="_blank" rel="noopener">觀看完整版：作品一</a>
+    </p>
+  </div>
+
+  <!-- Canva 影片 2 -->
+  <div class="video-wrapper">
+    <div class="canva-wrapper">
+      <iframe loading="lazy"
+        src="https://www.canva.com/design/DAGhlSTEYlQ/6T7H0c5QD2Fp2KpWvjvekQ/watch?embed"
+        width="100%" height="100%" allowfullscreen></iframe>
+    </div>
+    <p>
+      <a href="https://www.canva.com/design/DAGhlSTEYlQ/6T7H0c5QD2Fp2KpWvjvekQ/watch?utm_content=DAGhlSTEYlQ&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+         target="_blank" rel="noopener">觀看完整版：作品二（設計者：郭家妤）</a>
+    </p>
+  </div>
+
 </body>
 </html>
